Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -127,8 +127,7 @@
     font-size: 7rem;
     color: var(--orange);
     -webkit-text-fill-color: var(--orange);
-    -webkit-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: none;
 }
 
 
